feat: Update config

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read      # Necesario para hacer checkout del código (generalmente es el default)
+      deployments: write # Necesario para que la acción cree "GitHub Deployments"
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -22,10 +25,13 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v30
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          scope: amartinezh
+      - name: Pull Vercel Environment Information
+        run: npx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      - name: Deploy Project to Vercel
+        run: npx vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }} # Puede que no sea necesario si 'vercel pull' funcionó
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }} # Puede que no sea necesario si 'vercel pull' funcionó
