--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
         "react-app",
         "react-app/jest"
       ]
-    }, 
+    },
+    "overrides": {
+      "nth-check": "^2.0.1"
+    },
     "browserslist": {
       "production": [
         ">0.2%",
